Update The Edward link

--- a/src/Containers/ProjectsPage/projectsData.json
+++ b/src/Containers/ProjectsPage/projectsData.json
@@ -170,7 +170,7 @@
       "thumb": "/images/theEdwardLogo.jpg",
       "labels": ["All", "Web Development"],
       "github": "https://github.com/Jam52/evaluate-news-nlp",
-      "hosted": "https://601817b27b42f90007f862c9--upbeat-wilson-6fd9e7.netlify.app/",
+      "hosted": "https://awesome-newton-11cf39.netlify.app/#/",
       "gif": "/images/edward_gif.gif",
       "fullDescription": [
         "React, HTML5, CSS3, JavaScript",
