--- a/src/Containers/ProjectsPage/projectsData.json
+++ b/src/Containers/ProjectsPage/projectsData.json
@@ -1,215 +1,83 @@
 {
   "data": [
     {
-      "title": "Madame Mimi's",
-      "description": "A static web application to expore cocktails.",
-      "details": "React, Redux, RESTful Api's",
-      "thumb": "/images/madame-mimis-thumb.jpg",
-      "labels": ["All", "Web Development"],
-      "fullDescription": [
-        "React, Redux, HTML5, CSS3, JavaScript",
-        "Jamie's wife Mia (Mimi) has a dream of opening a cocktail bar called Madame Mimi's. This is a self driven project as an exercise in React and an ode to that dream. A static web aplication utilizing cocktaildb.com's API."
-      ],
-      "github": "https://github.com/Jam52/cocktail-app",
-      "hosted": "https://vigilant-minsky-54c7d5.netlify.app/",
-      "gif": "/images/madamemimi_gif.gif"
-    },
-    {
-      "title": "Travel Planner",
-      "description": "Udacity Capstone Project - Travel planner.",
-      "details": "Html, CSS, JavaScript,  RESTful Api's",
-      "thumb": "/images/travel-thumb.jpg",
-      "labels": ["All", "Web Development"],
-      "github": "https://github.com/Jam52/FrontEnd-Capstone-TravelApp",
-      "hosted": "https://600a8fb2703b620007b3d11e--awesome-newton-11cf39.netlify.app/#/",
-      "gif": "/images/travel.gif",
-      "fullDescription": [
-        "Technology used: HTML, SASS, JavaScript, Webpack",
-        "This was the final project for Udacity's front end web development certificate. Main features are chaining together several API's in order to dynamically fetch data in the form of images and weather data, POST the data to the node/express serve and in turn update the UI."
-      ]
-    },
-    {
-      "title": "SmallFoods",
-      "description": "A layout exercise set by an acquaintance at a marketing agency.",
-      "details": "HTML, CSS, JavaScript, Webpack",
-      "thumb": "/images/smallfoods-thumb.jpg",
-      "labels": ["All", "Web Development"],
-      "github": "https://github.com/Jam52/small-foods__sample-project",
-      "hosted": "https://silly-mirzakhani-3b8f84.netlify.app/",
-      "fullDescription": [
-        "HTML, CSS, JavaScript, Webpack, with attention to implementing BEM and WCAG2.0 standards.",
-        "This project was set by an senior developer at a professional marketing company, Kula Partners, who very kindly offered to give feedback and suggestions in order for me to learn and improve."
-      ],
-      "gif": "/images/smartfoods.gif"
-    },
-    {
-      "title": "Orbit Coffee Table",
-      "description": "A Coffee table designed to be able to pack flat for shipping.",
-      "details": "Furniture Design",
-      "thumb": "/images/orbit-thumb.jpg",
-      "labels": ["All", "Furniture Design", "Industrial Design"],
-      "images": [
-        "/images/orbit-1.png",
-        "/images/orbit-2.png",
-        "/images/orbit-3.png",
-        "/images/orbit-4.jpg"
-      ],
-      "fullDescription": [
-        "The Orbit coffee table was the table that kicked off my father and my side business of high end furniture.",
-        "It was featured in many magazines and even on the tv show Bit Bang Theory. Made of steam bent walnut with a uv bonded glass top."
-      ],
-      "github": "",
-      "hosted": ""
-    },
-    {
-      "title": "Summit Coffee Table",
-      "description": "An exersise to create a design using a single repeated form.",
-      "details": "Furniture Design",
-      "thumb": "/images/summit-thumb.jpg",
-      "labels": ["All", "Furniture Design", "Industrial Design"],
-      "images": [
-        "/images/summit-1.jpg",
-        "/images/summit-2.jpg",
-        "/images/summit-3.jpg"
-      ],
-      "fullDescription": [
-        "The summit table was designed around a single repeated form. This creates a beautiful repeated geomatry but also allows for mass manufacture.",
-        "Made with laminated walnut vaneer with a UV bonded glass top."
-      ],
-      "github": "",
-      "hosted": ""
-    },
-    {
-      "title": "Float Escape",
-      "description": "An interior design project for a wellness treatment business.",
-      "details": "Interior Design",
-      "thumb": "/images/float-thumb.jpg",
-      "labels": ["All", "Interior Design"],
-      "github": "",
-      "hosted": "",
-      "images": [
-        "/images/float-1.jpg",
-        "/images/float-2.jpg",
-        "/images/float-3.jpg"
-      ],
-      "fullDescription": [
-        "This project was to design a float therapy center. The aesthetic concept was for a modern clean design with a roman bath inspiration.",
-        "The main difficulty was implementing the design intent is a small space, as well as fitting all the required equipment and office areas in the floor plan.",
-        "Designed with lead designer Nino Pulsinelli at Pulsinelli Design."
-      ]
-    },
-    {
-      "title": "DMZ",
-      "description": "An reception design project for a tech incubartor in Toronto.",
-      "details": "Interior Design",
-      "thumb": "/images/dmz-thumb.jpg",
-      "labels": ["All", "Interior Design"],
-      "github": "",
-      "hosted": "",
-      "fullDescription": [
-        "The DMZ is a tech accelerator with an aim to help small tech startups helping them build great businesses. The design reflects the youthful community while creating a professional environment.",
-        "Designed with lead designer Nino Pulsinelli at Pulsinelli Design."
-      ],
-      "images": ["/images/DMZ-1.jpg", "/images/DMZ-2.jpg", "/images/DMZ-4.jpg"]
-    },
-    {
-      "title": "Move",
-      "description": "A bouteque womens fitness studio.",
-      "details": "Interior Design",
-      "thumb": "/images/move-thumb.jpg",
-      "labels": ["All", "Interior Design"],
-      "github": "",
-      "hosted": "",
-      "fullDescription": [
-        "Move is a boutique womens fitness studio in Toronto's east side. A unique studio with an emphasis on strength.",
-        "Designed with lead designer Nino Pulsinelli at Pulsinelli Design."
-      ],
-      "images": [
-        "/images/move-2.jpg",
-        "/images/move-3.jpg",
-        "/images/move-4.jpg",
-        "/images/move-5.jpg"
-      ]
-    },
-    {
-      "title": "Boardgame Marketplace",
-      "description": "Work in progress",
-      "details": "React, Redux, RESTful Api, PostgreSQL",
-      "thumb": "/images/boardgame-thumb.jpg",
-      "labels": ["All", "Web Development"],
-      "github": "https://github.com/Jam52/board-game-marketplace",
-      "hosted": "",
-      "gif": "/images/boardgame.gif",
-      "fullDescription": [
-        "Work in progress",
-        "The aim of this site is to create an easy platform to trade games using an innovative matching system rather then the traditional posting marketplace system."
-      ]
-    },
-    {
-      "title": "Shobu",
-      "description": "A two player abstract strategy game, designed to be a modern classic.",
-      "details": "Boardgame Design",
-      "thumb": "/images/shobu-thumb.jpg",
-      "labels": ["All", "Boardgame Design"],
-      "images": [
-        "/images/shobu-1.jpg",
-        "/images/shobu-2.jpg",
-        "/images/shobu-3.jpg"
-      ],
-      "fullDescription": [
-        "Shobu was designed with my co-designer Manolis Vranas and published by Smirk and Dagger Games.",
-        "As one of the first games we designed together set out to design a classic feeling game akin to chess, to this end we were very successful as it garnered amazing feedback on its release and selling out its first print run only a few short months."
-      ],
-      "github": "",
-      "hosted": ""
-    },
-    {
       "title": "The Edward",
-      "description": "A static front end website for an small hospitality business.",
-      "details": "Html, CSS, JS, RESTful Api, React",
+      "technology": ["HTML5", "CSS3", "JavaScript", "React"],
       "thumb": "/images/theEdwardLogo.jpg",
       "labels": ["All", "Web Development"],
       "github": "https://github.com/Jam52/evaluate-news-nlp",
       "hosted": "https://awesome-newton-11cf39.netlify.app/#/",
       "gif": "/images/edward_gif.gif",
-      "fullDescription": [
-        "React, HTML5, CSS3, JavaScript",
-        "This project is a single page web application for a small hospitality business located in Picton, ON. They needed a simple site for customers to explore their various accommodations, view potential dates and proceed with bookings.",
-        "The site is integrated with Lodgify.com's API's to fetch images, property details and availability."
+      "description": [
+        "This project is a single page web application for a small hospitality business located in Picton, ON.",
+        "They needed a simple site for customers to explore their various accommodations, view potential dates and proceed with bookings. The site is integrated with Lodgify.com's API's to fetch images, property details and availability."
       ]
     },
     {
+      "title": "Boardgame Marketplace",
+      "technology": ["HTML5", "CSS3", "JavaScript", "React", "PostgreSQL"],
+      "thumb": "/images/boardgame-thumb.jpg",
+      "labels": ["All", "Web Development"],
+      "github": "https://github.com/Jam52/board-game-marketplace",
+      "hosted": "",
+      "gif": "/images/boardgame.gif",
+      "description": [
+        "Work in progress.",
+        "The aim of this site is to create an easy platform to trade games using an innovative matching system rather then the traditional posting marketplace system."
+      ]
+    },
+    {
+      "title": "Madame Mimi's",
+      "technology": ["HTML5", "CSS3", "JavaScript", "React", "Redux"],
+      "thumb": "/images/madame-mimis-thumb.jpg",
+      "labels": ["All", "Web Development"],
+      "description": [
+        "Jamie's wife Mia (Mimi) has a dream of opening a cocktail bar called Madame Mimi's.",
+        "This is a self driven project as an exercise in React and an ode to that dream. A static web aplication utilizing cocktaildb.com's API."
+      ],
+      "github": "https://github.com/Jam52/cocktail-app",
+      "hosted": "https://vigilant-minsky-54c7d5.netlify.app/",
+      "gif": "/images/madamemimi_gif.gif"
+    },
+
+    {
       "title": "Personal Portfolio",
-      "description": "A static web page to present my accomplishments and projects so far.",
-      "details": "HTML, CSS, JavaScript, React",
+      "technology": ["HTML5", "CSS3", "JavaScript", "React"],
       "thumb": "/images/personal-thumb.jpg",
       "labels": ["All", "Web Development"],
       "github": "https://github.com/Jam52/personal-portfolio-react",
       "hosted": "https://www.jamiesajdak.com/",
-      "fullDescription": [
-        "HTML, CSS, JavaScript, React",
-        "This personal portfolio website was an exercise to improve my knowledge of html, css and React. The main focus during the building of the app was on responsive layouts, getting to better grips with flex and grid, and diving into transitions and animations."
+      "description": [
+        "This personal portfolio website was an exercise to improve my knowledge of html, css and React.",
+        "The main focus during the building of the app was on responsive layouts, getting to better grips with flex and grid, and diving into transitions and animations."
       ],
       "gif": "/images/personal.gif"
     },
     {
-      "title": "Jordan / Gatorade",
-      "description": "A shop in shop pop up cross brand experiance.",
-      "details": "Industrial Design",
-      "thumb": "/images/jordan-thumb.jpg",
-      "labels": ["All", "Interior Design", "Industrial Design"],
-      "github": "",
-      "hosted": "",
-      "fullDescription": [
-        "This project was a cross branch promotional experiance in the Toronto Jordan location.",
-        "Designed with lead designer Nino Pulsinelli at Pulsinelli Design."
-      ],
-      "images": [
-        "/images/jordan-1.jpg",
-        "/images/jordan-2.jpg",
-        "/images/jordan-3.jpg",
-        "/images/jordan-4.jpg"
+      "title": "Travel Planner",
+      "technology": ["HTML5", "CSS3", "JavaScript"],
+      "thumb": "/images/travel-thumb.jpg",
+      "labels": ["All", "Web Development"],
+      "github": "https://github.com/Jam52/FrontEnd-Capstone-TravelApp",
+      "hosted": "https://600a8fb2703b620007b3d11e--awesome-newton-11cf39.netlify.app/#/",
+      "gif": "/images/travel.gif",
+      "description": [
+        "This was the final project for Udacity's front end web development certificate.",
+        "Main features are chaining together several API's in order to dynamically fetch data in the form of images and weather data, POST the data to the node/express serve and in turn update the UI."
       ]
+    },
+    {
+      "title": "SmallFoods",
+
+      "technology": ["HTML5", "CSS3", "JavaScript"],
+      "thumb": "/images/smallfoods-thumb.jpg",
+      "labels": ["All", "Web Development"],
+      "github": "https://github.com/Jam52/small-foods__sample-project",
+      "hosted": "https://silly-mirzakhani-3b8f84.netlify.app/",
+      "description": [
+        "This project was set by an senior developer at a professional marketing company, Kula Partners, who very kindly offered to give feedback and suggestions in order for me to learn and improve."
+      ],
+      "gif": "/images/smartfoods.gif"
     }
   ]
 }
