Update projectCard style

--- a/src/Containers/ProjectsPage/projectsData.json
+++ b/src/Containers/ProjectsPage/projectsData.json
@@ -6,7 +6,7 @@
       "thumb": "/images/theEdwardLogo.jpg",
       "labels": ["All", "Web Development"],
       "github": "https://github.com/Jam52/evaluate-news-nlp",
-      "hosted": "https://awesome-newton-11cf39.netlify.app/#/",
+      "hosted": "https://www.theedward.ca/",
       "gif": "/images/edward_gif.gif",
       "description": [
         "This project is a single page web application for a small hospitality business located in Picton, ON.",
